// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots QRCodeScanner Default 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "height": "100%",
      "width": "100%",
    }
  }
/>
`;

exports[`Storyshots QRCodeScanner With permission 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "height": "100%",
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 2,
            "justifyContent": "center",
            "width": 750,
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 16,
            "textAlign": "center",
          }
        }
      >
        ...
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 2,
            "justifyContent": "center",
            "width": 750,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;
